# chebILP

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
chebILP/: __main__.py  cli.py  clingo_eval.py  fg_matching.py  ilp_classifier.py  ilp_path_manager.py  learn_fgs.py  mol2ilp.py  mol_to_fol.py  select_predicates.py  test.py
