[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chebILP"
version = "0.1.0"
description = "An Inductive Logic Programming framework for classifying chemical compounds into ChEBI classes."
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pandas",
    "networkx",
    "tqdm",
    "bitarray",
    "clingo",
    "janus_swi",
    "python-dotenv",
    "anthropic",
    "popper",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
chebILP = "chebILP.cli:main"

[tool.setuptools.packages.find]
include = ["chebILP*"]
