[project]
name = "chebilp"
version = "0.1.0"
description = "An Inductive Logic Programming framework for classifying chemical compounds into ChEBI classes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chebi-utils",
    "popper-ilp@git+https://github.com/logic-and-learning-lab/Popper#egg=main",
    "clingo>=5.8.0",
    "networkx>=3.4.2",
    "numpy>=1.24",
    "pandas>=3.0.1",
    "rdkit>=2022.09",
    "tqdm>=4.67.3",
]


[project.scripts]
chebILP = "chebILP.cli:main"

[tool.setuptools.packages.find]
include = ["chebILP*"]
